# Binance-AlgoRunner

./: .behaverc  .flake8  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  bot.example.ini  example.py  plain.output  pyproject.toml  run.py  setup.sh
.github/workflows/: codeql-analysis.yml  pythonapp.yml
algorunner/: __init__.py  events.py  exceptions.py  hooks.py  messages.py  monitoring.py  mutations.py  pdoc.md  runner.py  strategy.py  trader.py
algorunner/abstract/: __init__.py  base_strategy.py  calculator.py  strategy.py
algorunner/adapters/: __init__.py  _backtest.py  _binance.py  _sample.py  base.py  messages.py
algorunner/strategy/: __init__.py  base.py  exceptions.py  loader.py
docs/: index.html  search.json
docs/swimlanes/: README.md  order_flow.txt
lib/: account.py  runner.py
strategies/: example.py
test/: TESTING.md  __init__.py  conftest.py  helpers.py  runner.py  test_account.pyold  test_adapter.py  test_monitoring.py  test_mutations.py  test_runner.py  test_strategy.py
test/adapters/binance/: fixtures.py  fixtures.pyold  test_user_transformations.py  test_user_transformations.pyold
test/fixtures/: account.json  invalid_strategy.py  outbound_account_info.json  valid_strategy.py
test/fixtures/binance/: balance_update.json  execution_report.json  outbound_account_position.json
test/scenarios/: account_updates.feature  environment.py  hooks.feature  sync_agent.feature
test/scenarios/steps/: account.py  hooks.py  sync_agent.py
