[tool.poetry]
name = "AlgoRunner"
version = "0.0.1"
description = "Trading Algorithm execution for cryptocurrency exchanges."
authors = ["Fergus In London <fergus@fergus.london>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
pandas = "^1.3.1"
python-binance = "^1.0.12"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
pytest = "^6.2.4"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
